<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/mUserNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_user_name"/>

    <EditText
        android:id="@+id/mAgeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_age"/>

    <EditText
        android:id="@+id/mDescET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_desc"
        android:lines="2"/>

    <RadioGroup
        android:id="@+id/mRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/mBoyRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_boy"/>

        <RadioButton
            android:id="@+id/mGirlRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/text_girl_f"/>

    </RadioGroup>


    <EditText
        android:id="@+id/mPwdET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/mPwdConfirmET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password_again"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/mEmailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_register_remind"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/mRegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/text_registered"
        android:textColor="@android:color/white"/>

</LinearLayout>
